Added plot of frequency

--- a/practical 1/nlp1_assignment1.ipynb
+++ b/practical 1/nlp1_assignment1.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -72,22 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of sentences:  39604\n",
-      "Number of words:  929552\n",
-      "Number of distinct words:  44210\n",
-      "Number of distinct pos:  48\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "f = open('sec02-21.gold.tagged', 'r')\n",
     "\n",
@@ -119,13 +108,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "corpus_words = Counter(words)"
+    "import numpy as np\n",
+    "\n",
+    "corpus_words = Counter(words)\n",
+    "\n",
+    "# My laptop sucks and cannot plot for all words, try removing the 100 and run cell again Selaki :)\n",
+    "# I also think that it might be impossible to plot all with barchart... maybe we can try histogram!\n",
+    "sorted_corpus_words = corpus_words.most_common(100)\n",
+    "\n",
+    "\n",
+    "tokens = [x[0] for x in sorted_corpus_words]\n",
+    "counts = [x[1] for x in sorted_corpus_words]\n",
+    "\n",
+    "#print tokens, values (logspace(-0.5, log10(len(counts)), 20).astype(int))\n",
+    "\n",
+    "fig = plt.figure(figsize=(15,5))\n",
+    "\n",
+    "#Plot bar with values from dict and label with keys\n",
+    "plt.bar(range(len(sorted_corpus_words)), counts, width=0.3)\n",
+    "plt.xticks(range(len(sorted_corpus_words)), tokens)\n",
+    "\n",
+    "#Rotate labels by 90 degrees so you can see them\n",
+    "locs, tokens = plt.xticks()\n",
+    "plt.setp(tokens, rotation=90,fontsize=6)\n",
+    "\n",
+    "fig.show()"
    ]
   },
   {
@@ -137,26 +150,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The 25th most common word: \n",
-      "('Mr.', 4147)\n",
-      "\n",
-      "The 50th most common word: \n",
-      "('had', 1755)\n",
-      "\n",
-      "The 100th most common word: \n",
-      "('A', 860)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "most_common_25 = corpus_words.most_common(25)[-1]\n",
     "most_common_50 = corpus_words.most_common(50)[-1]\n",
@@ -176,19 +174,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of distinct pos:  48\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print \"Number of distinct pos: \", len(distinct_pos)"
    ]
@@ -202,20 +192,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The 25th most common word: \n",
-      "[('NN', 132134), ('IN', 99413), ('NNP', 90711), ('DT', 82147), ('JJ', 59643), ('NNS', 59332), (',', 48314), ('.', 39252), ('CD', 36148), ('RB', 30232)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "corpus_pos = Counter(pos)\n",
     "\n",
@@ -245,7 +226,23 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#Function to measure the probability of a uni-gram (w) in a corpus of total count N\n",
+    "\n",
+    "def get_word_probability(w, N):\n",
+    "    prob_w = corpus_words(w) / N\n",
+    "    return prob_w\n",
+    "\n",
+    "\n",
+    "#Function to measure the probability of an n-gram sentence (s) in the corpus\n",
+    "\n",
+    "def get_sentence_probability(s):\n",
+    "    \n",
+    "    for word in s:\n",
+    "        get_word_probability(word,corpus_size)\n",
+    "    \n",
+    "    return"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -327,7 +324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
