Implemented probabilities, there are some inconsistencies due to float numbers, but it works

--- a/practical 1/nlp1_assignment1.ipynb
+++ b/practical 1/nlp1_assignment1.ipynb
@@ -78,21 +78,29 @@
    },
    "outputs": [],
    "source": [
-    "f = open('sec02-21.gold.tagged', 'r')\n",
     "\n",
     "n_sentences = 0\n",
+    "clear_sentences = [] # We need the \"clean\" sentences in order to measure probabilities per sentence\n",
     "words = []\n",
     "pos = []\n",
     "\n",
-    "for SENTENCE in f:\n",
-    "    n_sentences += 1\n",
-    "    temp = SENTENCE.split()\n",
-    "    words += (temp[i].split('|')[0] for i in range(len(temp)))\n",
-    "    pos += (temp[i].split('|')[1] for i in range(len(temp)))\n",
-    "    \n",
+    "with open('sec02-21.gold.tagged', 'r') as f:\n",
+    "    for sentence in f:\n",
+    "        n_sentences += 1\n",
+    "        temp = sentence.split()\n",
+    "        words += (temp[i].split('|')[0] for i in range(len(temp)))\n",
+    "        pos += (temp[i].split('|')[1] for i in range(len(temp)))\n",
+    "\n",
+    "\n",
+    "clear_text = (' ').join(words)\n",
+    "\n",
+    "clear_sentences += clear_text.split(' . ')\n",
+    "\n",
+    "print clear_sentences[1]\n",
+    "\n",
     "distinct_words = set(words)\n",
     "distinct_pos = set(pos)\n",
-    "    \n",
+    "\n",
     "print \"Number of sentences: \", n_sentences\n",
     "print \"Number of words: \", len(words)\n",
     "print \"Number of distinct words: \", len(distinct_words)\n",
@@ -117,10 +125,9 @@
     "import numpy as np\n",
     "\n",
     "corpus_words = Counter(words)\n",
-    "\n",
     "# My laptop sucks and cannot plot for all words, try removing the 100 and run cell again Selaki :)\n",
     "# I also think that it might be impossible to plot all with barchart... maybe we can try histogram!\n",
-    "sorted_corpus_words = corpus_words.most_common(100)\n",
+    "sorted_corpus_words = corpus_words.most_common(80)\n",
     "\n",
     "\n",
     "tokens = [x[0] for x in sorted_corpus_words]\n",
@@ -223,25 +230,54 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "#Function to measure the probability of a uni-gram (w) in a corpus of total count N\n",
+    "import operator\n",
+    "import functools\n",
     "\n",
-    "def get_word_probability(w, N):\n",
-    "    prob_w = corpus_words(w) / N\n",
+    "#Function to measure the probability of a uni-gram (w) in a corpus of total count N\n",
+    "def get_word_probability(corpus, w):\n",
+    "    #print corpus[w]\n",
+    "    #print N\n",
+    "    prob_w = (100.0 * float(corpus[w])) / (100 * float(len(corpus)))\n",
     "    return prob_w\n",
     "\n",
+    "#Function to measure the probabilities of each word in a sentence and \n",
+    "# the total probability of an n-gram sentence (s) in the corpus\n",
     "\n",
-    "#Function to measure the probability of an n-gram sentence (s) in the corpus\n",
+    "def get_sentence_probability(corpus,sentence):\n",
+    "    #Probabilities of a sentence\n",
+    "    probs_of_s = []\n",
+    "    for word in sentence.split(\" \"):\n",
+    "        print word\n",
+    "        probs_of_s.append(get_word_probability(corpus,word))\n",
+    "    \n",
+    "    total_prob_s = functools.reduce(operator.mul, probs_of_s, 1)\n",
+    "    \n",
+    "    return probs_of_s, total_prob_s\n",
+    "                          \n",
+    "print \"For the word the \", get_word_probability(corpus_words,'Inc.')\n",
     "\n",
-    "def get_sentence_probability(s):\n",
-    "    \n",
-    "    for word in s:\n",
-    "        get_word_probability(word,corpus_size)\n",
-    "    \n",
-    "    return"
+    "# If you wanna take the first 2 sentences, then un-comment the for loop underneath. \n",
+    "\n",
+    "# Probability of the first two sentences in the corpus\n",
+    "# enum = 0\n",
+    "# for sentence in clear_sentences:\n",
+    "#     if enum < 3:\n",
+    "#         prob_of_s, total = get_sentence_probability(corpus_words,sentence)\n",
+    "#         print prob_of_s, total\n",
+    "#         enum += 1\n",
+    "#     else:\n",
+    "#         continue\n",
+    "# print clear_sentences[1]\n",
+    "\n",
+    "x, y = get_sentence_probability(corpus_words, clear_sentences[2])\n",
+    "print \"The probabilities of all words in the sentence is : \\n\", x\n",
+    "print \"\\n\"\n",
+    "print \"The total probability of the sentence is : \", y "
    ]
   },
   {
