advance on dev data

--- a/practical 1/nlp1_assignment1.ipynb
+++ b/practical 1/nlp1_assignment1.ipynb
@@ -67,7 +67,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "import numpy as np\n",
+    "import operator\n",
+    "import functools"
    ]
   },
   {
@@ -78,33 +81,38 @@
    },
    "outputs": [],
    "source": [
+    "def read_corpus(data):\n",
+    "    n_sentences = 0\n",
+    "    words = []\n",
+    "    pos = []\n",
     "\n",
-    "n_sentences = 0\n",
-    "clear_sentences = [] # We need the \"clean\" sentences in order to measure probabilities per sentence\n",
-    "words = []\n",
-    "pos = []\n",
+    "    # Read text from file\n",
+    "    with open(data, 'r') as f:\n",
+    "        for sentence in f:\n",
+    "            n_sentences += 1\n",
+    "            temp = sentence.split()\n",
+    "            words += (temp[i].split('|')[0] for i in range(len(temp)))\n",
+    "            pos += (temp[i].split('|')[1] for i in range(len(temp)))\n",
+    "    \n",
+    "    return n_sentences, words, pos\n",
     "\n",
-    "with open('sec02-21.gold.tagged', 'r') as f:\n",
-    "    for sentence in f:\n",
-    "        n_sentences += 1\n",
-    "        temp = sentence.split()\n",
-    "        words += (temp[i].split('|')[0] for i in range(len(temp)))\n",
-    "        pos += (temp[i].split('|')[1] for i in range(len(temp)))\n",
+    "n_sentences, words, pos = read_corpus('sec02-21.gold.tagged')\n",
     "\n",
     "\n",
+    "# We need the \"clean\" sentences in order to measure probabilities per sentence\n",
+    "clear_sentences = [] \n",
     "clear_text = (' ').join(words)\n",
-    "\n",
     "clear_sentences += clear_text.split(' . ')\n",
     "\n",
-    "print clear_sentences[1]\n",
-    "\n",
+    "# Get only distinct words/pos\n",
     "distinct_words = set(words)\n",
     "distinct_pos = set(pos)\n",
+    "\n",
     "\n",
     "print \"Number of sentences: \", n_sentences\n",
     "print \"Number of words: \", len(words)\n",
     "print \"Number of distinct words: \", len(distinct_words)\n",
-    "print \"Number of distinct pos: \", len(distinct_pos)\n"
+    "print \"Number of distinct pos: \", len(distinct_pos)"
    ]
   },
   {
@@ -122,30 +130,32 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "corpus_words = Counter(words)\n",
-    "# My laptop sucks and cannot plot for all words, try removing the 100 and run cell again Selaki :)\n",
-    "# I also think that it might be impossible to plot all with barchart... maybe we can try histogram!\n",
-    "sorted_corpus_words = corpus_words.most_common(80)\n",
+    "sorted_corpus_words = corpus_words.most_common(3000)\n",
     "\n",
-    "\n",
+    "# split words and counts\n",
     "tokens = [x[0] for x in sorted_corpus_words]\n",
     "counts = [x[1] for x in sorted_corpus_words]\n",
     "\n",
-    "#print tokens, values (logspace(-0.5, log10(len(counts)), 20).astype(int))\n",
-    "\n",
+    "# create plot\n",
     "fig = plt.figure(figsize=(15,5))\n",
     "\n",
-    "#Plot bar with values from dict and label with keys\n",
+    "# Plot bar with values from dict and label with keys\n",
     "plt.bar(range(len(sorted_corpus_words)), counts, width=0.3)\n",
     "plt.xticks(range(len(sorted_corpus_words)), tokens)\n",
     "\n",
-    "#Rotate labels by 90 degrees so you can see them\n",
+    "# Rotate labels by 90 degrees so you can see them\n",
     "locs, tokens = plt.xticks()\n",
     "plt.setp(tokens, rotation=90,fontsize=6)\n",
     "\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Due to performance issues, we only take the first 3000 words for the plot. Howeveer, it is enough to show that the data follows Zipf's law, with a very long tail"
    ]
   },
   {
@@ -209,7 +219,7 @@
     "\n",
     "most_common_10 = corpus_pos.most_common(10)\n",
     "\n",
-    "print \"The 25th most common word: \\n\", most_common_10"
+    "print \"The 25th most common pos: \\n\", most_common_10"
    ]
   },
   {
@@ -231,53 +241,42 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "import operator\n",
-    "import functools\n",
-    "\n",
     "#Function to measure the probability of a uni-gram (w) in a corpus of total count N\n",
     "def get_word_probability(corpus, w):\n",
-    "    #print corpus[w]\n",
-    "    #print N\n",
-    "    prob_w = (100.0 * float(corpus[w])) / (100 * float(len(corpus)))\n",
+    "    prob_w = (100.0 * float(corpus[w])) / (100. * float(len(corpus)))\n",
     "    return prob_w\n",
+    "\n",
     "\n",
     "#Function to measure the probabilities of each word in a sentence and \n",
     "# the total probability of an n-gram sentence (s) in the corpus\n",
-    "\n",
     "def get_sentence_probability(corpus,sentence):\n",
     "    #Probabilities of a sentence\n",
     "    probs_of_s = []\n",
     "    for word in sentence.split(\" \"):\n",
-    "        print word\n",
     "        probs_of_s.append(get_word_probability(corpus,word))\n",
     "    \n",
     "    total_prob_s = functools.reduce(operator.mul, probs_of_s, 1)\n",
     "    \n",
     "    return probs_of_s, total_prob_s\n",
-    "                          \n",
-    "print \"For the word the \", get_word_probability(corpus_words,'Inc.')\n",
     "\n",
-    "# If you wanna take the first 2 sentences, then un-comment the for loop underneath. \n",
+    "\n",
     "\n",
     "# Probability of the first two sentences in the corpus\n",
-    "# enum = 0\n",
-    "# for sentence in clear_sentences:\n",
-    "#     if enum < 3:\n",
-    "#         prob_of_s, total = get_sentence_probability(corpus_words,sentence)\n",
-    "#         print prob_of_s, total\n",
-    "#         enum += 1\n",
-    "#     else:\n",
-    "#         continue\n",
-    "# print clear_sentences[1]\n",
-    "\n",
-    "x, y = get_sentence_probability(corpus_words, clear_sentences[2])\n",
-    "print \"The probabilities of all words in the sentence is : \\n\", x\n",
-    "print \"\\n\"\n",
-    "print \"The total probability of the sentence is : \", y "
+    "enum = 0\n",
+    "for sentence in clear_sentences:\n",
+    "    if enum < 2:\n",
+    "        print \"Sentence is : \", clear_sentences[enum]\n",
+    "        print \"Length of sentence is : \", len(clear_sentences[enum].split(\" \")), \" words\"\n",
+    "        prob_of_s, total = get_sentence_probability(corpus_words,sentence)\n",
+    "        #print \"The probabilities of all words in the sentence is : \", prob_of_s\n",
+    "        print \"The total probability of the sentence is : \", total, \"\\n\"\n",
+    "        enum += 1\n",
+    "    else:\n",
+    "        continue\n"
    ]
   },
   {
@@ -325,7 +324,33 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "n_sentences_dev, words_dev, pos_dev = read_corpus('sec00.gold.tagged')\n",
+    "\n",
+    "# Get only distinct words/pos\n",
+    "distinct_words_dev = set(words_dev)\n",
+    "distinct_pos_dev = set(pos_dev)\n",
+    "\n",
+    "print \"Number of sentences in development data: \", n_sentences_dev\n",
+    "print \"Number of words in development data: \", len(words_dev)\n",
+    "print \"Number of distinct words in development data: \", len(distinct_words_dev)\n",
+    "print \"Number of distinct pos in development data: \", len(distinct_pos_dev)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Elements in development data but not in training\n",
+    "unseen_words = distinct_words_dev.difference(distinct_words)\n",
+    "unseen_pos   = distinct_pos_dev.difference(distinct_pos)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print \"\\nNumber of unseen words: \", len(unseen_words), \"\\nFor example: \", list(unseen_words)[0:10]\n",
+    "print \"Number of unseen pos: \", len(unseen_pos), \"\\nFor example: \", list(unseen_pos)[0:10]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -341,7 +366,46 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Count unseen \n",
+    "unseen_word_list = []\n",
+    "unseen_pos_list = []\n",
+    "\n",
+    "for word in words_dev:\n",
+    "    if (word in unseen_words):\n",
+    "        unseen_word_list.append(word)\n",
+    "        \n",
+    "\n",
+    "for pos in pos_dev:\n",
+    "    if (pos in unseen_pos):\n",
+    "        unseen_pos_list.append(pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Most common unseen elements\n",
+    "corpus_word_dev = Counter(unseen_word_list)\n",
+    "corpus_pos_dev = Counter(unseen_pos_list)\n",
+    "\n",
+    "most_common_3_word = corpus_word_dev.most_common(3)\n",
+    "most_common_3_pos = corpus_pos_dev.most_common(3)\n",
+    "\n",
+    "print \"The 3rd most common unseen words: \\n\", most_common_3_word\n",
+    "print \"\\nThe 3rd most common unseen pos: \\n\", most_common_3_pos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that even with a large corpus as data, we still have many unseen words with significant count. However, this is not the case for the POS tags, since there is a finite manageable number of tags, it is likely that a large enough corpus will contain all."
+   ]
   }
  ],
  "metadata": {
@@ -360,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
