--- a/practical 1/nlp1_assignment1.ipynb
+++ b/practical 1/nlp1_assignment1.ipynb
@@ -83,6 +83,9 @@
    "source": [
     "def read_corpus(data):\n",
     "    n_sentences = 0\n",
+    "    \n",
+    "    word_pos_combo = []\n",
+    "    word_pos_dic = dict()\n",
     "    words = []\n",
     "    pos = []\n",
     "\n",
@@ -91,28 +94,56 @@
     "        for sentence in f:\n",
     "            n_sentences += 1\n",
     "            temp = sentence.split()\n",
-    "            words += (temp[i].split('|')[0] for i in range(len(temp)))\n",
-    "            pos += (temp[i].split('|')[1] for i in range(len(temp)))\n",
+    "            \n",
+    "            for i in range(len(temp)):\n",
+    "                token = temp[i].split('|')\n",
+    "                \n",
+    "                word_pos_combo.append(temp[i])\n",
+    "                words.append(token[0])\n",
+    "                pos.append(token[1])\n",
+    "                \n",
+    "                if token[0] in word_pos_dic:\n",
+    "                    # link word to new POS seen\n",
+    "                    if token[1] not in word_pos_dic[token[0]]:\n",
+    "                        word_pos_dic[token[0]].append(token[1])\n",
+    "                else:\n",
+    "                    # create new entry for word\n",
+    "                    word_pos_dic[token[0]] = [token[1]]\n",
+    "                            \n",
+    "            \n",
+    "    # Get only distinct words/pos\n",
+    "    distinct_word_pos_combo = set(word_pos_combo)\n",
+    "    distinct_words = set(words)\n",
+    "    distinct_pos = set(pos)\n",
     "    \n",
-    "    return n_sentences, words, pos\n",
+    "    # Display dataset information\n",
+    "    print \"Number of sentences in \", data, \":\", n_sentences\n",
+    "    print \"Number of words in \", data, \":\", len(words)\n",
+    "    \n",
+    "    print \"\\nNumber of distinct words in\", data, \":\", len(distinct_words)\n",
+    "    print \"Number of distinct pos in\", data, \":\", len(distinct_pos)\n",
+    "    print \"Number of distinct word-pos combinations in \", data, \":\", len(distinct_word_pos_combo)\n",
+    "    \n",
+    "    return words, pos, word_pos_combo, word_pos_dic, distinct_words, distinct_pos, distinct_word_pos_combo\n",
     "\n",
-    "n_sentences, words, pos = read_corpus('sec02-21.gold.tagged')\n",
-    "\n",
+    "# Proccess training data\n",
+    "words, pos, word_pos_combo, word_pos_dic, distinct_words, distinct_pos, distinct_word_pos_combo = read_corpus('sec02-21.gold.tagged')\n",
     "\n",
     "# We need the \"clean\" sentences in order to measure probabilities per sentence\n",
     "clear_sentences = [] \n",
     "clear_text = (' ').join(words)\n",
-    "clear_sentences += clear_text.split(' . ')\n",
-    "\n",
-    "# Get only distinct words/pos\n",
-    "distinct_words = set(words)\n",
-    "distinct_pos = set(pos)\n",
-    "\n",
-    "\n",
-    "print \"Number of sentences: \", n_sentences\n",
-    "print \"Number of words: \", len(words)\n",
-    "print \"Number of distinct words: \", len(distinct_words)\n",
-    "print \"Number of distinct pos: \", len(distinct_pos)"
+    "clear_sentences += clear_text.split(' . ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print word_pos_dic.keys()[1000], word_pos_dic[word_pos_dic.keys()[1000]]"
    ]
   },
   {
@@ -131,7 +162,7 @@
    "outputs": [],
    "source": [
     "corpus_words = Counter(words)\n",
-    "sorted_corpus_words = corpus_words.most_common(3000)\n",
+    "sorted_corpus_words = corpus_words.most_common(300)\n",
     "\n",
     "# split words and counts\n",
     "tokens = [x[0] for x in sorted_corpus_words]\n",
@@ -219,7 +250,7 @@
     "\n",
     "most_common_10 = corpus_pos.most_common(10)\n",
     "\n",
-    "print \"The 25th most common pos: \\n\", most_common_10"
+    "print \"The 10 most common pos: \\n\", most_common_10"
    ]
   },
   {
@@ -293,7 +324,40 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Collect words (keys) with multiple pos (values with list longer than 1)\n",
+    "words_multiple_pos = []\n",
+    "\n",
+    "for word, pos in word_pos_dic.items():\n",
+    "    if len(pos) > 1:\n",
+    "        words_multiple_pos.append(set(pos))\n",
+    "        \n",
+    "print \"Words with more than one POS: \", len(words_multiple_pos)\n",
+    "print \"POS tags combination examples: \", words_multiple_pos[0:10]\n",
+    "\n",
+    "#frequency_combos = dict()\n",
+    "\n",
+    "# compare sets and count equals\n",
+    "#for i in range(len(words_multiple_pos)):\n",
+    "#    for j in range(i+1, len(words_multiple_pos)):\n",
+    "#        # find a match\n",
+    "#        if words_multiple_pos[i] == words_multiple_pos[j]:\n",
+    "#            \n",
+    "#            if words_multiple_pos[i] in frequency_combos:\n",
+    "#                # increase count\n",
+    "#                frequency_combos[words_multiple_pos[i]] += 1\n",
+    "#            else:\n",
+    "#                # create new entry, start count at 2\n",
+    "#                frequency_combos[words_multiple_pos[i]] = 2\n",
+    "    \n",
+    "    \n",
+    "# 10 most frequent word-pos combinations\n",
+    "frequency_combos = Counter(word_pos_combo)\n",
+    "\n",
+    "most_common_10_combo = frequency_combos.most_common(10)\n",
+    "\n",
+    "print \"\\nThe 10 most common combinations: \\n\", most_common_10_combo"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -325,28 +389,13 @@
    },
    "outputs": [],
    "source": [
-    "n_sentences_dev, words_dev, pos_dev = read_corpus('sec00.gold.tagged')\n",
-    "\n",
-    "# Get only distinct words/pos\n",
-    "distinct_words_dev = set(words_dev)\n",
-    "distinct_pos_dev = set(pos_dev)\n",
-    "\n",
-    "print \"Number of sentences in development data: \", n_sentences_dev\n",
-    "print \"Number of words in development data: \", len(words_dev)\n",
-    "print \"Number of distinct words in development data: \", len(distinct_words_dev)\n",
-    "print \"Number of distinct pos in development data: \", len(distinct_pos_dev)\n",
-    "\n",
-    "\n",
+    "# Proccess development data\n",
+    "words_dev, pos_dev, word_pos_combo_dev, word_pos_dic_dev, distinct_words_dev, distinct_pos_dev, distinct_word_pos_combo_dev = read_corpus('sec00.gold.tagged')\n",
     "\n",
     "\n",
     "# Elements in development data but not in training\n",
     "unseen_words = distinct_words_dev.difference(distinct_words)\n",
     "unseen_pos   = distinct_pos_dev.difference(distinct_pos)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "print \"\\nNumber of unseen words: \", len(unseen_words), \"\\nFor example: \", list(unseen_words)[0:10]\n",
     "print \"Number of unseen pos: \", len(unseen_pos), \"\\nFor example: \", list(unseen_pos)[0:10]"
